k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapi-service
spec:
  type: LoadBalancer
  selector:
    app: weatherapi
  ports:
  - port: 80
    targetPort: 8080
