k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: weather.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weatherapi-service
            port:
              number: 80
